deploy/gitops/apps/private-ocr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr-service
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30081
  selector:
    app: ocr-service
